Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-13391

[C++] CSV streaming reader does not include same error information as table reader

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 5.0.0
    • 5.0.0
    • C++

    Description

      When an error parsing or converting occurs when using the streaming reader the column number is not included in the message and the row number is not correct.

      Attachments

        Issue Links

          Activity

            People

              neworld Nate Clark
              neworld Nate Clark
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1.5h
                  1.5h