ARROW-13391: Correct row number and add column number to error messages